try to fix background scaling issue on mobile

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,5 +1,6 @@
 html, body {
   height: 100%;
+  width: 100%;
   margin: 0;
   font-family: 'Montserrat', sans-serif;
 }
@@ -11,7 +12,7 @@ html, body {
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
 }
 
 /* The hero image */
